fix: use dynamic device height, to adjust to differences in mobile browser with native URL bar hidden or visible
(cherry picked from commit a7b05ddb85955cf317fd7be198649d75eadea836)

--- a/elements/src/apps/pos-app-browser/pos-app-browser.css
+++ b/elements/src/apps/pos-app-browser/pos-app-browser.css
@@ -3,7 +3,7 @@ pos-router {
   padding: 0;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 pos-navigation-bar {
