--- a/elements/src/global.css
+++ b/elements/src/global.css
@@ -5,7 +5,7 @@
 @import '~pollen-css/dist/pollen.css';
 
 body {
-  height: 100vh;
+  height: 100dvh;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
